fixed header spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,7 +18,7 @@
 @import "bootstrap";
 
 body {
-  padding-top: 60px;
+  padding-top: 80px;
   padding-bottom: 60px;
 }
 
